--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img id="profile-pic" src="/images/profile-pic.jpg" alt="Giovanni's profile photo" width="210px" height="210px">
+        <img id="profile-pic" src="images/profile-pic.jpg" alt="Giovanni's profile photo" width="210px" height="210px">
         <div class="info">
             <h1 class="header_info" id="name">GIOVANNI BOULAY</h1>
             <p class="header_info" id="time">PROGRAMMING FOR <span id="days"></span> DAYS </p> <!-- JS TIME ELAPSED -->
